--- a/rps.html
+++ b/rps.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="javascript.js"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <h1 class="header">ROCK PAPER SCISSORS</h1>
+    <div id="scores" class="Scores">
+        <div class="playerSection">
+            <h1 id="playerScore">0</h1>
+            <h2>Player Scores</h2>
+        </div>
+        <div id="choices">
+            <button value="rock">ROCK</button>
+            <button value ="paper">PAPER</button>
+            <button value="scissors">SCISSORS</button>
+        </div>
+        <div class="computerSection">
+            <h1 id="computerScore">0</h1>
+            <h2>Computer Score</h2>
+        </div>
+    </div>
+    <div class="msg">
+        <p class="message"></p>
+    </div>
+    <script src="javascript.js"></script>
 </body>
 </html>
